# Arduino-Networking

./: .gitignore  .gitlab-ci.yml  README.md  root-CMakeLists.txt
controller/: platformio.ini
controller/src/: main.cpp
router/: platformio.ini
router/src/: main.cpp
samples/: CMakeLists.txt  MyClass.cpp  MyClass.h  main.cpp
student-lib/src/: CMakeLists.txt  ard_network_layer_three.cpp  ard_network_layer_three.h  ard_network_layer_three_message.cpp  ard_network_layer_three_message.h  ard_network_layer_three_routing.cpp  ard_network_layer_three_routing.h  ard_network_layer_two.cpp  ard_network_layer_two.h  ard_network_layer_two_functor.cpp  ard_network_layer_two_functor.h  ard_peer_context.cpp  ard_peer_context.h
switch/: compiler_extra_options.py  platformio.ini
switch/src/: main.cpp
train/: platformio.ini
train/src/: main.cpp
